frontend/test/should_fail/computations_decl_use_calls_type_mismatch_proc_004.grg
using model_init;

proc(-e:E1->) : (Edge)
{
	return(e);
}

rule r
{
	-e1:E1->;
	modify {
		eval {
			def -e2:E1->;
			(e2) = proc(e1);
		}
	}
}

